# rumorScrape

./: .gitignore  README.rst  pyproject.toml
src/rumorScrape/: __main__.py  app.py
